--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<style>
+    img{ display: block;
+        margin: auto;
+        width: 700px;}
+</style>
+
 <img src="2023.poster.final.png" usemap="#image-map">
 
 <map name="image-map">
